--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="title_activity_profile">ProfileActivity</string>
     <string name="title_activity_create_community">CreateCommunityActivity</string>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_community_info_display">CommunityInfoDisplayActivity</string>
 </resources>
