--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_activity_community_info_display">CommunityInfoDisplayActivity</string>
     <string name="title_activity_view_pager">ViewPagerActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_community_list">CommunityListActivity</string>
 </resources>
